# 007_ai-news-python

./: .pre-commit-config.yaml  commands.txt  mypy.ini  news_python.md  pyproject.toml  timeit_pruebas.py
.github/workflows/: main.yml
docs/: MyPy en Python.md  RUFF EN PYTHON.MD  RUFF_FORMATTER.MD  asincrona.md  async_awit.md  ci_cd_github_actions.md  commands.txt  event_loop_asyncio.md  logging_sentry.md  make_makefile.md  migrate_vnen_to_uv.md  optimizacion_rendimiento.md  pre-commit.md  pytest_coverage_xdist_tdd.md  rendimiento.md
review_mypy/: index.html
review_mypy/html/src/: __init__.py.html
review_mypy/html/src/platzi_news/: __init__.py.html  config.py.html  main.py.html
review_mypy/html/src/platzi_news/analysis/: __init__.py.html  analyzer.py.html
review_mypy/html/src/platzi_news/core/: __init__.py.html  exceptions.py.html  models.py.html  services.py.html
review_mypy/html/src/platzi_news/do_not_format/: test.py.html
review_mypy/html/src/platzi_news/io/: __init__.py.html  cli.py.html  display.py.html
review_mypy/html/src/platzi_news/sources/: __init__.py.html  guardian.py.html  newsapi.py.html
src/: async_await.py
src/platzi_news/: config.py  main.py
src/platzi_news/analysis/: analyzer.py
src/platzi_news/core/: services.py
src/platzi_news/do_not_format/: test.py
src/platzi_news/io/: cli.py  display.py
src/platzi_news/sources/: guardian.py  newsapi.py
