[project]
name = "platzi-news"
version = "0.1.0"
description = "CLI app to search news from Guardian and NewsAPI, and analyze with OpenAI"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Luis Martinez", email = "lcmartinezl05@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sentry-sdk>=2.39.0",
    "httpx>=0.28.1",
]

[project.scripts]
platzi-news = "platzi_news.main:main"

[tool.ruff]
extend-exclude = [
    "src/platzi_news/do_not_format"
]

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.2",
]

[tool.mypy]
packages = ["platzi_news"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "S",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
